objects/ASI_eForm_Recruitment__c.object
<CustomObject>
    <description>Recruitment Request</description>
    <fields>
        <fullName>ASI_eForm_Budget_Status__c</fullName>
        <defaultValue>true</defaultValue>
        <description>H/C Budget Status</description>
        <inlineHelpText>Is this Head Count Budgeted? If No, please fill in the comment.</inlineHelpText>
        <label>Is this headcount budgeted?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Budget_Status_reason__c</fullName>
        <description>H/C Budget Status (Unbudgeted)</description>
        <inlineHelpText>If No Budget, please comment</inlineHelpText>
        <label>If No, please comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Department__c</fullName>
        <description>Department</description>
        <label>Function</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>ASI_eForm_Job_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Management</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>Factory</fullName>
                </value>
                <value>
                    <fullName>HR</fullName>
                </value>
                <value>
                    <fullName>External Affairs</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_eForm_Dept_new__c</fullName>
        <label>Department</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Administration / Management Assistance / Facilities</fullName>
                </value>
                <value>
                    <fullName>Central &amp; Youngnam Wholesaler</fullName>
                    <label>Central &amp; Youngnam</label>
                </value>
                <value>
                    <fullName>Export</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>Human Resources</fullName>
                </value>
                <value>
                    <fullName>Information Systems &amp; Technology</fullName>
                </value>
                <value>
                    <fullName>Legal</fullName>
                </value>
                <value>
                    <fullName>Maketing - International Brand</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Marketing - Imperial</fullName>
                </value>
                <value>
                    <fullName>Marketing - Innovation &amp; Digital</fullName>
                </value>
                <value>
                    <fullName>Marketing - International Brand</fullName>
                </value>
                <value>
                    <fullName>Marketing – Modern Spirits</fullName>
                </value>
                <value>
                    <fullName>Marketing – Strategic Planning</fullName>
                </value>
                <value>
                    <fullName>MD Managerment</fullName>
                </value>
                <value>
                    <fullName>Metro Wholesaler</fullName>
                </value>
                <value>
                    <fullName>Off Trade</fullName>
                </value>
                <value>
                    <fullName>Marketing – PR</fullName>
                    <label>PR &amp; Communications</label>
                </value>
                <value>
                    <fullName>Production &amp; Manufacturing</fullName>
                </value>
                <value>
                    <fullName>Public Affairs and Labor-Management</fullName>
                </value>
                <value>
                    <fullName>Purchasing</fullName>
                </value>
                <value>
                    <fullName>Sales (Domestic &amp; International Markets)</fullName>
                </value>
                <value>
                    <fullName>Sales-Core Metro</fullName>
                </value>
                <value>
                    <fullName>Sales-Outer Metro</fullName>
                </value>
                <value>
                    <fullName>Supply Chain / Logistics / Customer Service</fullName>
                </value>
                <value>
                    <fullName>Trade Marketing</fullName>
                </value>
                <value>
                    <fullName>Trade Operations Team</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_eForm_Employee_Group__c</fullName>
        <description>Employee Group</description>
        <label>Employee Group</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Regular</fullName>
                </value>
                <value>
                    <fullName>Temporary</fullName>
                </value>
                <value>
                    <fullName>Outsourcing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_eForm_Employment_Status__c</fullName>
        <description>Employment Status</description>
        <label>Employment Status</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>ASI_eForm_Employee_Group__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Full-Time</fullName>
                    <default>true</default>
                    <label>Full-Time</label>
                </value>
                <value>
                    <fullName>Part-Time</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_eForm_Expected_Start_Date__c</fullName>
        <description>Expected Starting Date</description>
        <label>Expected Starting Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Job_Type__c</fullName>
        <label>Job Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Non-Sales</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_eForm_Key_Competencies__c</fullName>
        <description>Key Competencies</description>
        <label>Key Competencies</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Level__c</fullName>
        <description>Work Experience - Level</description>
        <label>Work Experience - Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Entry Level</fullName>
                </value>
                <value>
                    <fullName>Experienced</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_eForm_Major__c</fullName>
        <description>Education - Major</description>
        <label>Education - Major</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Opt_Approver_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sys Approver 1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Recruitment_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Opt_Approver_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sys Approver 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Recruitment_Requests1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Opt_Approver_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sys Approver 3</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Recruitment_Requests2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Opt_MC_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MC Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Recruitment_Requests3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Other_Reason__c</fullName>
        <description>Other - Reason</description>
        <label>Other - Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Perferred__c</fullName>
        <description>Work Experience - Perferred</description>
        <label>Work Experience - Preferred</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Period_of_Employment_From__c</fullName>
        <description>Period of Employment (From)</description>
        <label>Starting Date (Temp/Outsourcing only)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Period_of_Employment_To__c</fullName>
        <description>Period of Employment (To)</description>
        <label>End Date (Temp/Outsourcing only)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Reason__c</fullName>
        <description>Reason for Request</description>
        <label>Reason for Request</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Report_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Immediate Report Line</description>
        <label>Immediate Report Line</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Recruitment_Requests_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Requester_Company__c</fullName>
        <description>Requester Company</description>
        <formula>ASI_eForm_Requester_Record__r.ASI_eForm_Employee_Company_Name_MDM__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Requester Company</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Requester_Department__c</fullName>
        <description>Requester Department</description>
        <formula>ASI_eForm_Requester_Record__r.ASI_eForm_MDM_Department__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Requester Department</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Requester_ID__c</fullName>
        <description>Requester Employee No.</description>
        <formula>ASI_eForm_Requester_Record__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Requester ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Requester_Name__c</fullName>
        <description>Requester Name</description>
        <formula>ASI_eForm_Requester_Record__r.ASI_eForm_Employee_First_Name__c +&apos; &apos; + ASI_eForm_Requester_Record__r.ASI_eForm_Employee_Last_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Requester Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Requester_Record__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Requester ID</label>
        <referenceTo>ASI_eForm_HR_MDM__c</referenceTo>
        <relationshipLabel>Recruitment Requests</relationshipLabel>
        <relationshipName>Recruitment_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Requester_Title__c</fullName>
        <description>Requester Title</description>
        <formula>ASI_eForm_Requester_Record__r.ASI_eForm_Employee_Job_Title__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Requester Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Requisition_Type__c</fullName>
        <description>Recruitment Type</description>
        <label>Recruitment Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New Position</fullName>
                </value>
                <value>
                    <fullName>Replacement</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_eForm_School_Level__c</fullName>
        <description>Education - School Level</description>
        <label>Education - School Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Graduate School</fullName>
                </value>
                <value>
                    <fullName>University</fullName>
                </value>
                <value>
                    <fullName>College</fullName>
                </value>
                <value>
                    <fullName>High School</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_eForm_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_eForm_Work_Hour__c</fullName>
        <description>Work Hour Part-time only</description>
        <label>Work Hour/Day (Part-time only)</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>ASI_eForm_Employment_Status__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_eForm_Work_Period_From__c</fullName>
        <description>Work Period Part-time only (From)</description>
        <label>Work Period Part-time only (From)</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>ASI_eForm_Employment_Status__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>7:00 AM</fullName>
                </value>
                <value>
                    <fullName>7:30 AM</fullName>
                </value>
                <value>
                    <fullName>8:00 AM</fullName>
                </value>
                <value>
                    <fullName>8:30 AM</fullName>
                </value>
                <value>
                    <fullName>9:00 AM</fullName>
                </value>
                <value>
                    <fullName>9:30 AM</fullName>
                </value>
                <value>
                    <fullName>10:00 AM</fullName>
                </value>
                <value>
                    <fullName>10:30 AM</fullName>
                </value>
                <value>
                    <fullName>11:00 AM</fullName>
                </value>
                <value>
                    <fullName>11:30 AM</fullName>
                </value>
                <value>
                    <fullName>12:00 PM</fullName>
                </value>
                <value>
                    <fullName>12:30 PM</fullName>
                </value>
                <value>
                    <fullName>1:00 PM</fullName>
                </value>
                <value>
                    <fullName>1:30 PM</fullName>
                </value>
                <value>
                    <fullName>2:00 PM</fullName>
                </value>
                <value>
                    <fullName>2:30 PM</fullName>
                </value>
                <value>
                    <fullName>3:00 PM</fullName>
                </value>
                <value>
                    <fullName>3:30 PM</fullName>
                </value>
                <value>
                    <fullName>4:00 PM</fullName>
                </value>
                <value>
                    <fullName>4:30 PM</fullName>
                </value>
                <value>
                    <fullName>5:00 PM</fullName>
                </value>
                <value>
                    <fullName>5:30 PM</fullName>
                </value>
                <value>
                    <fullName>6:00 PM</fullName>
                </value>
                <value>
                    <fullName>6:30 PM</fullName>
                </value>
                <value>
                    <fullName>7:00 PM</fullName>
                </value>
                <value>
                    <fullName>7:30 PM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_eForm_Work_Period_To__c</fullName>
        <description>Work Period Part-time only (To)</description>
        <label>Work Period Part-time only (To)</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>ASI_eForm_Employment_Status__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>7:00 AM</fullName>
                </value>
                <value>
                    <fullName>7:30 AM</fullName>
                </value>
                <value>
                    <fullName>8:00 AM</fullName>
                </value>
                <value>
                    <fullName>8:30 AM</fullName>
                </value>
                <value>
                    <fullName>9:00 AM</fullName>
                </value>
                <value>
                    <fullName>9:30 AM</fullName>
                </value>
                <value>
                    <fullName>10:00 AM</fullName>
                </value>
                <value>
                    <fullName>10:30 AM</fullName>
                </value>
                <value>
                    <fullName>11:00 AM</fullName>
                </value>
                <value>
                    <fullName>11:30 AM</fullName>
                </value>
                <value>
                    <fullName>12:00 PM</fullName>
                </value>
                <value>
                    <fullName>12:30 PM</fullName>
                </value>
                <value>
                    <fullName>1:00 PM</fullName>
                </value>
                <value>
                    <fullName>1:30 PM</fullName>
                </value>
                <value>
                    <fullName>2:00 PM</fullName>
                </value>
                <value>
                    <fullName>2:30 PM</fullName>
                </value>
                <value>
                    <fullName>3:00 PM</fullName>
                </value>
                <value>
                    <fullName>3:30 PM</fullName>
                </value>
                <value>
                    <fullName>4:00 PM</fullName>
                </value>
                <value>
                    <fullName>4:30 PM</fullName>
                </value>
                <value>
                    <fullName>5:00 PM</fullName>
                </value>
                <value>
                    <fullName>5:30 PM</fullName>
                </value>
                <value>
                    <fullName>6:00 PM</fullName>
                </value>
                <value>
                    <fullName>6:30 PM</fullName>
                </value>
                <value>
                    <fullName>7:00 PM</fullName>
                </value>
                <value>
                    <fullName>7:30 PM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_eForm_YOS__c</fullName>
        <description>Work Experience-Year of Services</description>
        <label>Work Experience-YOS</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>&lt;1</fullName>
                </value>
                <value>
                    <fullName>1-2</fullName>
                </value>
                <value>
                    <fullName>3-5</fullName>
                </value>
                <value>
                    <fullName>6-7</fullName>
                </value>
                <value>
                    <fullName>8+</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_eForm_new_Position__c</fullName>
        <description>Position &amp; Title of Opening</description>
        <label>Position &amp; Title of Opening</label>
        <type>TextArea</type>
    </fields>
    <label>Recruitment Request</label>
    <listViews>
        <fullName>ASI_eHR_KOR_RR_Approved</fullName>
        <columns>NAME</columns>
        <columns>ASI_eForm_Requisition_Type__c</columns>
        <columns>ASI_eForm_Dept_new__c</columns>
        <columns>ASI_eForm_new_Position__c</columns>
        <columns>ASI_eForm_Job_Type__c</columns>
        <columns>ASI_eForm_Department__c</columns>
        <columns>ASI_eForm_Employee_Group__c</columns>
        <columns>ASI_eForm_Employment_Status__c</columns>
        <columns>ASI_eForm_Expected_Start_Date__c</columns>
        <columns>ASI_eForm_Period_of_Employment_To__c</columns>
        <columns>ASI_eForm_Status__c</columns>
        <columns>ASI_eForm_Requester_Name__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_eForm_Recruitment__c.ASI_eForm_KR_Recruitment</value>
        </filters>
        <filters>
            <field>ASI_eForm_Status__c</field>
            <operation>equals</operation>
            <value>Approved</value>
        </filters>
        <label>eHR_KOR_RR_Approved</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_KOR_All_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_eHR_KOR_RR_Draft</fullName>
        <columns>NAME</columns>
        <columns>ASI_eForm_Requisition_Type__c</columns>
        <columns>ASI_eForm_Dept_new__c</columns>
        <columns>ASI_eForm_new_Position__c</columns>
        <columns>ASI_eForm_Job_Type__c</columns>
        <columns>ASI_eForm_Department__c</columns>
        <columns>ASI_eForm_Employee_Group__c</columns>
        <columns>ASI_eForm_Employment_Status__c</columns>
        <columns>ASI_eForm_Expected_Start_Date__c</columns>
        <columns>ASI_eForm_Period_of_Employment_To__c</columns>
        <columns>ASI_eForm_Status__c</columns>
        <columns>ASI_eForm_Requester_Name__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_eForm_Recruitment__c.ASI_eForm_KR_Recruitment</value>
        </filters>
        <filters>
            <field>ASI_eForm_Status__c</field>
            <operation>equals</operation>
            <value>Draft</value>
        </filters>
        <label>eHR_KOR_RR_Draft</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_KOR_All_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_eHR_KOR_RR_Rejected</fullName>
        <columns>NAME</columns>
        <columns>ASI_eForm_Requisition_Type__c</columns>
        <columns>ASI_eForm_Dept_new__c</columns>
        <columns>ASI_eForm_new_Position__c</columns>
        <columns>ASI_eForm_Job_Type__c</columns>
        <columns>ASI_eForm_Department__c</columns>
        <columns>ASI_eForm_Employee_Group__c</columns>
        <columns>ASI_eForm_Employment_Status__c</columns>
        <columns>ASI_eForm_Expected_Start_Date__c</columns>
        <columns>ASI_eForm_Period_of_Employment_To__c</columns>
        <columns>ASI_eForm_Status__c</columns>
        <columns>ASI_eForm_Requester_Name__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_eForm_Recruitment__c.ASI_eForm_KR_Recruitment</value>
        </filters>
        <filters>
            <field>ASI_eForm_Status__c</field>
            <operation>equals</operation>
            <value>Rejected</value>
        </filters>
        <label>eHR_KOR_RR_Rejected</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_KOR_All_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_eHR_KOR_RR_Submitted</fullName>
        <columns>NAME</columns>
        <columns>ASI_eForm_Requisition_Type__c</columns>
        <columns>ASI_eForm_Dept_new__c</columns>
        <columns>ASI_eForm_new_Position__c</columns>
        <columns>ASI_eForm_Job_Type__c</columns>
        <columns>ASI_eForm_Department__c</columns>
        <columns>ASI_eForm_Employee_Group__c</columns>
        <columns>ASI_eForm_Employment_Status__c</columns>
        <columns>ASI_eForm_Expected_Start_Date__c</columns>
        <columns>ASI_eForm_Period_of_Employment_To__c</columns>
        <columns>ASI_eForm_Status__c</columns>
        <columns>ASI_eForm_Requester_Name__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_eForm_Recruitment__c.ASI_eForm_KR_Recruitment</value>
        </filters>
        <filters>
            <field>ASI_eForm_Status__c</field>
            <operation>equals</operation>
            <value>Submitted</value>
        </filters>
        <label>eHR_KOR_RR_Submitted</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_KOR_All_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ASI_eForm_Requisition_Type__c</columns>
        <columns>ASI_eForm_Dept_new__c</columns>
        <columns>ASI_eForm_new_Position__c</columns>
        <columns>ASI_eForm_Job_Type__c</columns>
        <columns>ASI_eForm_Department__c</columns>
        <columns>ASI_eForm_Employee_Group__c</columns>
        <columns>ASI_eForm_Employment_Status__c</columns>
        <columns>ASI_eForm_Expected_Start_Date__c</columns>
        <columns>ASI_eForm_Period_of_Employment_To__c</columns>
        <columns>ASI_eForm_Status__c</columns>
        <columns>ASI_eForm_Requester_Name__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_eForm_Recruitment__c.ASI_eForm_KR_Recruitment</value>
        </filters>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>RR-{000000}</displayFormat>
        <label>Recruitment Request Ref No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Recruitment Requests</pluralLabel>
    <recordTypes>
        <fullName>ASI_eForm_KR_Recruitment</fullName>
        <active>true</active>
        <description>Korean Recruitment Request</description>
        <label>ASI eForm KR Recruitment Request</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>ASI_eForm_Expected_Starting_Date</fullName>
        <active>true</active>
        <errorConditionFormula>ASI_eForm_Expected_Start_Date__c   &lt; TODAY()</errorConditionFormula>
        <errorDisplayField>ASI_eForm_Expected_Start_Date__c</errorDisplayField>
        <errorMessage>Expected Start Date must be later than today</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_eForm_HC_Budget</fullName>
        <active>true</active>
        <errorConditionFormula>if( ( ASI_eForm_Budget_Status_reason__c == &apos;&apos; &amp;&amp;  ! ASI_eForm_Budget_Status__c ) , true, false)</errorConditionFormula>
        <errorDisplayField>ASI_eForm_Budget_Status_reason__c</errorDisplayField>
        <errorMessage>Need to fill in reason if choose “Unbudgeted”</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_eForm_checkStartEnd</fullName>
        <active>true</active>
        <errorConditionFormula>IF((ISPICKVAL(ASI_eForm_Employee_Group__c, &apos;Temporary&apos;) || ISPICKVAL(ASI_eForm_Employee_Group__c, &apos;Outsourcing&apos;)) &amp;&amp; (ISNULL(ASI_eForm_Period_of_Employment_From__c) || ISNULL(ASI_eForm_Period_of_Employment_To__c)), True, False)</errorConditionFormula>
        <errorMessage>Start day and End day must be input when option &quot;Temporary&quot; or &quot;Outsourcing&quot; selected.</errorMessage>
    </validationRules>
</CustomObject>